--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,7 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
 <%= link_to "<< Back to Articles List", articles_path %>
+<%= link_to "edit", edit_article_path(@article) %>
+<td><%= link_to 'Destroy', articles_destroy_path(@article), 
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
